<resources>
    <string name="app_name">Тест на логику</string>
    <string name="button_start">Start test</string>
    <string name="button_Instruction">Instruction</string>
    <string name="image_text">Logica</string>
    <string name="tool_text_for_question">"Шмурдик боится как мышей, так и тараканов."</string>
    <string name="first_answer">шмурдик не боится тараканов</string>
    <string name="two_answer">шмурдик боится мышей</string>
    <string name="three_answer">шмурдик боится мышей больше, чем тараканов, но и тараканов боится тоже</string>
    <string name="submit_game">submit</string>
    <string name="title_game">Вопросы </string>
    <string name="title_result">Результат</string>
    <string name="one_test_var">Вы не захотели проходить тест</string>
    <string name="two_test_var">У вас логическое мышление отсутствует вообще. Тот результат, который получили вы, можно получить простым тыканием наугад. Не стоит пытаться "рассуждать логически", особенно прилюдно. Вас могут принять за сумасшедшего</string>
    <string name="three_test_var">Ваше логическое мышление неразвито. Если вы попытаетесь публично рассуждать, то, вполне возможно, вас будут высмеивать. Вам придется обратиться к другим сильным сторонам вашей личности, если вы хотите кого-то в чем-то убедить или что-то узнать. Однако, может быть, вы не совсем безнадежны, если попробуете подучиться</string>
    <string name="test_answer">У вас хорошо развито логическое мышление. Однако вы можете делать ошибки в нестандартных или запутанных случаях. Получив какой-нибудь вывод в результате рассуждения, не торопитесь принимать его за истину. Возьмите за правило перепроверять свои выводы, искать в них ошибки и просто слабые места. Не удивляйтесь, не возмущайтесь, если вас поправляют: возможно, за дело</string>
    <string name="four_test_var">У вас хорошо развито логическое мышление. Однако вы можете делать ошибки в нестандартных или запутанных случаях. Получив какой-нибудь вывод в результате рассуждения, не торопитесь принимать его за истину. Возьмите за правило перепроверять свои выводы, искать в них ошибки и просто слабые места. Не удивляйтесь, не возмущайтесь, если вас поправляют: возможно, за дело</string>
    <string name="five_test_var">У вас отлично развито логическое мышление. Если вы и делаете ошибки в рассуждениях, то в основном по случайности или от усталости, но не из-за неумения. Тем не менее, помните, что все хорошее всегда можно улучшить - если, конечно, оно вам надо</string>
    <string name="correctAnswer_text">Правильных ответов: %1$d</string>
    <string name="incstruction_title_one">\"Условие\" - это условие задачи, некоторые обстоятельства, которые считаются ранее каким-то образом доказанными и всегда истинными. \"Следствие\" - это логическое следствие из условия. Из трех следствий одно и только одно правильно. Ваша задача - проверить свою способность отделять правильные логические следствия от неправильных.</string>
    <string name="instruction_title_two">Тест не требует специальных математических знаний. Все слова в тесте надо толковать так, как это делается в обычном повседневном русском языке, но не так, как в математике или иной специальной области. Все слова в тесте надо толковать буквально, никаких метафор или намеков в тесте не предусмотрено.</string>
    <string name="instruction_title_three">В тесте вы можете обнаружить незнакомые слова, такие, как \"куздра\". Эти слова предназначены для того, чтобы оценить вашу способность к логическому мышлению, отделив ее от других ваших знаний об окружающем мире. Считайте, что эти слова могут означать все, что угодно, но так, чтобы фраза в условии была правдивой по смыслу. Например, если написано, что \"куздра бежит\", это означает, что куздра действительно умеет бегать и, по-видимому, имеет ноги или лапки, это может быть к примеру человек, животное или шагающий механизм.</string>
    <string name="instruction_title_four">Иногда в тесте встречаются противоположные по смыслу слова и выражения, например \"умеют\" и \"не умеют\", \"большой\" и \"маленький\" и т.п. Во всех таких случаях предполагается, что промежуточные варианты \"умеет, но плохо\", \"средний\" не рассматриваются.</string>
    <string name="title_value_main">Тест на логическое мышление</string>

    <string name="name_activity_file">Главное меню</string>
    <string name="about_application">О приложении</string>
    <string name="about_title_me">Был разработан с целью обучения основных компонент Андройда. </string>
    <string name="me_github">github.com/MRdimenter</string>
</resources>
